--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
 *{
     margin: 0;
-    padding: 0;;
+    padding: 0;
+    
+}
+body{
+    background-color: black;
 }
 #currtime-cont{
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding: 20px;
+    background-color: white;
 }
 #current-info{
     border: 1px solid black;
